--- a/IHAHabits/res/layout/activity_main.xml
+++ b/IHAHabits/res/layout/activity_main.xml
@@ -5,42 +5,9 @@
     android:background="@drawable/surfer"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/habitTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="60dp"
-        android:text="Healthy habits"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/habitDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/habitTitle"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"
-        android:text="-"
-        android:textColor="#c0f0f0f0"
-        android:textSize="40sp"
-        android:textStyle="bold" />
-
-    <ListView
-        android:id="@+id/habitsList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/habitDate"
-        android:padding="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_centerHorizontal="true"
-        android:background="#30000000"
-        android:divider="#10ffffff"
-        android:dividerHeight="2px" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
