--- a/IHAHabits/res/layout/habits_history_fragment.xml
+++ b/IHAHabits/res/layout/habits_history_fragment.xml
@@ -11,11 +11,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:paddingTop="60dp"
-        android:text="Habits performance"
+        android:text="Performance"
         android:textColor="#ffffff"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
+    <!--
     <Spinner
         android:id="@+id/timeSpinner"
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@
         android:layout_marginTop="30dp"
         android:background="#50000000"
         android:textAlignment="center" />
+    -->
 
     <TextView
         android:id="@+id/habitDate"
@@ -44,7 +46,7 @@
         android:id="@+id/habitsList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/timeSpinner"
+        android:layout_below="@+id/habitDate"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
